--- a/style.css
+++ b/style.css
@@ -10,3 +10,53 @@ body {
 }
 
 /* Add styles here! */
+
+.max-width-wrapper {
+  width: 100%;
+  padding-top: 72px;
+  padding-bottom: 64px;
+}
+
+.bg-white {
+  background-color: hsl(0deg, 0%, 100%);
+}
+
+.bg-dark {
+  background-color: hsl(0deg, 0%, 40%);
+}
+
+.intro-chunk {
+  min-width: 390px;
+  max-width: 800px;
+  margin: auto;
+  padding: 24px;
+}
+
+strong {
+  display: inline-block;
+  color: hsl(160deg, 100%, 30%);
+  text-align: center;
+}
+
+main {
+  border-top: 5px solid hsl(0deg, 0%, 60%);
+}
+
+.card {
+  min-width: 390px;
+  max-width: 800px;
+  margin: auto;
+  padding: 24px;
+  padding-top: 10px;
+  border-bottom: 5px solid hsl(0deg, 0%, 60%);
+}
+
+.indented-heading {
+  display: inline-block;
+  background-color: hsl(45deg, 100%, 50%);
+  border-bottom: 5px solid hsl(45deg, 100%, 40%);
+  padding: 16px 32px;
+  padding-left: 32px;
+  margin: 0;
+  margin-left: -32px;
+}
